--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mdi/font": "7.0.96",
     "core-js": "^3.29.0",
+    "element-plus": "^2.4.2",
     "pinia": "^2.0.0",
     "roboto-fontface": "*",
     "vue": "^3.2.0",
@@ -19,14 +20,16 @@
   },
   "devDependencies": {
     "@babel/types": "^7.21.4",
-    "@types/node": "^18.15.0",
-    "@vitejs/plugin-vue": "^4.0.0",
+    "@types/node": "^20.9.2",
+    "@vitejs/plugin-vue": "^4.5.0",
     "@vue/eslint-config-typescript": "^11.0.0",
     "eslint": "^8.37.0",
     "eslint-plugin-vue": "^9.3.0",
     "sass": "^1.60.0",
     "typescript": "^5.0.0",
+    "unplugin-auto-import": "^0.17.1",
     "unplugin-fonts": "^1.0.3",
+    "unplugin-vue-components": "^0.25.2",
     "vite": "^4.2.0",
     "vite-plugin-vuetify": "^1.0.0",
     "vue-tsc": "^1.2.0"
